name:            blas-lapack-bindings
version:         0.8
homepage:        http://github.com/Shimuuar/blas-lapack-bindings
synopsis:        Low level bindings to BLAS and LAPACK
description:
    The BLAS (Basic Linear Algebra Subprograms) are routines that provide
    standard building blocks for performing basic vector and matrix operations. 
    The Level 1 BLAS perform scalar, vector and vector-vector operations, the 
    Level 2 BLAS perform matrix-vector operations, and the Level 3 BLAS perform
    matrix-matrix operations. Because the BLAS are efficient, portable, and
    widely available, they are commonly used in the development of high quality
    linear algebra software, LAPACK for example.
    .
    For more information, see the Netlib BLAS webpage:
    <http://www.netlib.org/blas/> 
    .
category:        Math
license:         BSD3
license-file:    COPYING
copyright:       (c) 2010. Patrick Perry <patperry@gmail.com>
author:          Patrick Perry
maintainer:      Patrick Perry <patperry@gmail.com>
cabal-version:   >= 1.2.3
build-type:      Configure
tested-with:     GHC == 6.12.3

extra-source-files:     NEWS README TODO configure.ac configure
                        aclocal.m4 m4/ax_check_blas.m4
                        m4/ax_check_lapack.m4
                        linear-algebra.buildinfo.in cbits/config.h.in
                        tests/Makefile.in


extra-tmp-files:        config.log config.status autom4te.cache
                        linear-algebra.buildinfo cbits/config.h
                        tests/Makefile

Library
    exposed-modules:    Numeric.BLAS.Bindings
                        Numeric.LAPACK.Bindings
                        
    other-modules:      Numeric.BLAS.Bindings.Types
                        Numeric.BLAS.Bindings.Level1
                        Numeric.BLAS.Bindings.Level2
                        Numeric.BLAS.Bindings.Level3
                        Numeric.BLAS.Bindings.Double
                        Numeric.BLAS.Bindings.Zomplex

                        Numeric.LAPACK.Bindings.Types
                        Numeric.LAPACK.Bindings.Double
                        Numeric.LAPACK.Bindings.Zomplex
                        
    
    include-dirs:       cbits
    includes:           cbits/config.h
                        cbits/f77_func-hsc.h

    ghc-options:        -Wall -O2
    
    build-depends:      base >= 4 && < 5,
                        storable-complex


