name:            blas-lapack-bindings
version:         0.8
homepage:        http://github.com/Shimuuar/blas-lapack-bindings
synopsis:        Low level bindings to BLAS and LAPACK
description:
    The BLAS (Basic Linear Algebra Subprograms) are routines that provide
    standard building blocks for performing basic vector and matrix operations. 
    The Level 1 BLAS perform scalar, vector and vector-vector operations, the 
    Level 2 BLAS perform matrix-vector operations, and the Level 3 BLAS perform
    matrix-matrix operations. Because the BLAS are efficient, portable, and
    widely available, they are commonly used in the development of high quality
    linear algebra software, LAPACK for example.
    .
    For more information, see the Netlib BLAS webpage:
    <http://www.netlib.org/blas/> 
    .
category:        Math
license:         BSD3
license-file:    COPYING
copyright:       (c) 2010. Patrick Perry <patperry@gmail.com>
author:          Patrick Perry
maintainer:      Patrick Perry <patperry@gmail.com>
cabal-version:   >= 1.2.3
build-type:      Simple
tested-with:     GHC == 6.12.3

extra-source-files:
  NEWS README TODO
 
Library
  build-depends:
    base >= 4 && < 5,
    storable-complex
  build-tools:
    c2hs
  exposed-modules:
    Numeric.BLAS.Bindings
--    Numeric.LAPACK.Bindings
  other-modules:
    -- BLAS
    Numeric.BLAS.Bindings.Types
    Numeric.BLAS.Bindings.Level1
    Numeric.BLAS.Bindings.Level2
    Numeric.BLAS.Bindings.Level3
    -- LAPACK
--    Numeric.LAPACK.Bindings.Types
--    Numeric.LAPACK.Bindings.Double
--    Numeric.LAPACK.Bindings.Zomplex
  include-dirs:
    cbits
  includes:
    cbits/blas.h
  extra-libraries:
    lapack,
    blas
  ghc-options:        -Wall -O2
