name:            blas-bindings
version:         0.1
homepage:        http://github.com/Shimuuar/blas-lapack-bindings
synopsis:        Low level bindings to BLAS.
description:
  This package provide low level bindings to CBLAS routines. CBLAS is
  standard C API for BLAS.
  .
  The BLAS (Basic Linear Algebra Subprograms) are routines that provide
  standard building blocks for performing basic vector and matrix operations.
  The Level 1 BLAS perform scalar, vector and vector-vector operations, the
  Level 2 BLAS perform matrix-vector operations, and the Level 3 BLAS perform
  matrix-matrix operations. Because the BLAS are efficient, portable, and
  widely available, they are commonly used in the development of high quality
  linear algebra software, LAPACK for example.
  .
  For more information, see the Netlib BLAS webpage:
  <http://www.netlib.org/blas/>
  .
  Optional cabal flags
  .
  * -fTraceCalls trace every BLAS call. Useful for debugging.

category:        Math, Numeric
bug-reports:     https://github.com/Shimuuar/blas-bindings/issues
license:         BSD3
license-file:    COPYING
copyright:       2010 Patrick Perry <patperry@gmail.com>, 2012 Aleksey Khudyakov <alexey.skladnoy@gmail.com>
maintainer:      Aleksey Khudyakov <alexey.skladnoy@gmail.com>
cabal-version:   >= 1.8
build-type:      Simple

extra-source-files:
  README

Flag TraceCalls
  Description: Trace every call to BLAS
  Default:     False

Library
  build-depends:
    base >= 4 && < 5,
    storable-complex
  build-tools:
    c2hs
  exposed-modules:
    Numeric.BLAS.Bindings
  other-modules:
    -- BLAS
    Numeric.BLAS.Bindings.Types
    Numeric.BLAS.Bindings.Level1
    Numeric.BLAS.Bindings.Level2
    Numeric.BLAS.Bindings.Level3
    -- Tracing
    Numeric.BLAS.Bindings.Trace
  include-dirs:
    cbits
  includes:
    cbits/blas.h
  extra-libraries:
    blas
  ghc-options:
    -Wall -O2
  if flag(TraceCalls)
    cpp-options: -DTRACE_BLAS_CALLS

source-repository head
  type:     git
  location: http://github.com/Shimuuar/blas-bindings
